--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,7 @@
+1.0.5.2
+
+ * Essential bugfixes so that it actually works for 5.0.4; supplied by an extremely helpful user.
+
 1.0.5.1
 
  * Update the changelog before adding release tag so it shows up properly on the pages that curse generates
